welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: illegal start of simple pattern
for (tour <- 1 to 10; cot? <- 1 to 4) {for (carreau <- 1 to 8) {avance()};gauche();} 
                           ^Runner:3: error: '<-' expected but '}' found.
	}
        ^