welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (tour <- 1 to 10; cot? <- 1 to 4) {for (carreau <- 1 to 8) {avance()};gauche();}